Bug 142648 - FILESAVE PPTX Creating hyperlink to a slide with shortened name results in invalid file
Summary: FILESAVE PPTX Creating hyperlink to a slide with shortened name results in in...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.2.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.3.0 target:7.2.1
Keywords: filter:pptx, implementationError
: 142647 (view as bug list)
Depends on:
Blocks: PPTX-Corrupted PPTX-Hyperlink
  Show dependency treegraph
 
Reported: 2021-06-04 11:26 UTC by NISZ LibreOffice Team
Modified: 2021-08-20 07:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from PowerPoint (36.52 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-06-04 11:26 UTC, NISZ LibreOffice Team
Details
The original file saved by Impress after adding the hyperlink (23.20 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-06-04 11:29 UTC, NISZ LibreOffice Team
Details
Example file from PowerPoint with shorter text in Title (36.63 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-06-04 11:30 UTC, NISZ LibreOffice Team
Details
The original file with shorter title saved by Impress after adding the hyperlink (23.21 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-06-04 11:30 UTC, NISZ LibreOffice Team
Details
Screenshot of the exported document when trying to open it in PowerPoint (44.82 KB, image/png)
2021-06-04 11:31 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-06-04 11:26:23 UTC
Created attachment 172615 [details]
Example file from PowerPoint

Attached PP-made file contains a slide with a too long title that is shortened to Slide 1 and another slide with a shorter title.
There is a hyperlink on the first slide to the second, this opens and roundtrips correctly.
If I create a new internal hyperlink pointing from the second slide to the first, filesave to PPTX will create an invalid file.

As a counter test I’ll attach another version of the example file with shorter title that is not shortened to Slide 1.
Creating an internal hyperlink from the second slide to the first creates a valid PPTX with correctly working hyperlink.

Steps to reproduce:
    1. Open attached file
    2. Go to the second slide, select the text in the lower half.
    3. Press Ctrl+K to open the Hyperlink dialog, select Document on the left
    4. Press the Target icon under Target in Document
    5. Select “Slide 1” in the dialog, press OK
    6. Save as PPTX, open the file in PowerPoint

Actual results:
PowerPoint finds invalid contents in the file.
Reopening the file in Impress also loses the hyperlink just made.

Expected results:
Working hyperlink, no invalid contents.

LibreOffice details:
Version: 7.2.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 3b57ebb445df8a2bc3d916ea79f8af45e20e4e62
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-06-04 11:29:41 UTC
Created attachment 172616 [details]
The original file saved by Impress after adding the hyperlink
Comment 2 NISZ LibreOffice Team 2021-06-04 11:30:00 UTC
Created attachment 172617 [details]
Example file from PowerPoint with shorter text in Title
Comment 3 NISZ LibreOffice Team 2021-06-04 11:30:19 UTC
Created attachment 172618 [details]
The original file with shorter title saved by Impress after adding the hyperlink
Comment 4 NISZ LibreOffice Team 2021-06-04 11:31:38 UTC
Created attachment 172619 [details]
Screenshot of the exported document when trying to open it in PowerPoint
Comment 5 Commit Notification 2021-07-20 16:51:27 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7eb0e52527e729a21973e70d5be8e0a6779ec748

tdf#142648 PPTX: import long slide names to avoid broken link export

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Tibor Nagy 2021-07-21 08:47:08 UTC
*** Bug 142647 has been marked as a duplicate of this bug. ***
Comment 7 NISZ LibreOffice Team 2021-08-09 10:24:51 UTC
Verified in:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d1f1f546b212ecd651146addeb328806bb270d5f
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 8 Commit Notification 2021-08-20 07:45:52 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/0b327b69ef78a7565625dabbe8dcf0140884fe26

tdf#142648 PPTX: import long slide names to avoid broken link export

It will be available in 7.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.