tdf#142648 PPTX: import long slide names to avoid broken link export

PPTX import renames the slides using their short title text.
Apply this for the titles with 64 or more characters, too,
abbreviating the title text instead of using the default
slide name "page1", "page2" etc., because the default slide
names result broken hyperlinks during the PPTX export.

To test the fix manually, create a new hyperlink
using text selection and Insert Hyperlink (Ctrl-K),
clicking on Target in Document button on the Document pane,
and selecting a slide name.

Note: the problem still exists for the duplicated
or newly inserted slides, which get default slide names.

Change-Id: Iec1fab5a2ee862353766ed7e13b1501b3a325d0e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/118548
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/120750
Tested-by: Jenkins